[package]
name = "godview"
version = "0.1.0"
edition = "2021"
description = "A library that allows you to efficiently and cost effectively search for places based on a configurable and extensible set of criteria using the Google Places API."
license = "MIT"
authors = ["Cristian Croitoru <cristianalexandrucroitoru@gmail.com"]

[dependencies]
postgis_diesel = "2.4.1"
google-places-api = { git = "https://github.com/ZmoleCristian/google-places-api-rs.git", branch = "croi-dev" }
tokio = "1.43.0"
geo = "0.29.3"
futures = "0.3.31"
